reduce issue dropdown v-spacing

--- a/app/assets/stylesheets/issues.scss
+++ b/app/assets/stylesheets/issues.scss
@@ -45,6 +45,7 @@ article.issue{
     .f-dropdown{
       max-width: rem-calc(145);
       a{
+        padding: rem-calc(5 8);
         @media #{$medium-only} {
           font-size: rem-calc(12);
         }
